--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          <button id="dark-mode-toggle-mobile" class="btn" style="margin-top: 1rem;">
+            🌙
+          </button>
         </div>
       </div>
     </nav>
@@ -366,7 +369,7 @@
           <p><a href="https://www.linkedin.com/in/beknur-ualikhanuly-039704245/">LinkedIn</a></p>
         </div>
       </div>
-      
+
       <form id="contact-form" action="#" method="POST">
         <div class="form-group">
           <label for="name">Name:</label>
