--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
           <span></span>
           <span></span>
         </div>
+
+        <div class="menu-overlay" onclick="toggleMenu()"></div>
+
+
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
